Add hot reload